--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "this is learn case library",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "all:start": "npm-run-all --parallel start:*",
+    "start:vue-ts": "cd vue-ts-init && yarn start",
+    "start:umi": "cd umi-init && yarn start"
   },
   "repository": {
     "type": "git",
@@ -20,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/virtueDe/single-init/issues"
   },
-  "homepage": "https://github.com/virtueDe/single-init#readme"
+  "homepage": "https://github.com/virtueDe/single-init#readme",
+  "dependencies": {
+    "npm-run-all": "^4.1.5"
+  }
 }
